--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
     <div class="container">
-        <div>Today is: <span><input type="date" id="dateSelector" placeholder="Date"/></span> </div>
+        <div>DTE for: <span><input type="date" id="dateSelector" placeholder="Date"/></span> </div>
         <div class="DTEArea">
             <div class="selectedDTE">
                 <h1 id="dte">Loading...</h1>
